--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # compiled output
-/dist
+#/dist
 /node_modules
 /build
 
@@ -16,7 +16,7 @@ lerna-debug.log*
 .DS_Store
 
 # Tests
-/coverage
+#/coverage
 /.nyc_output
 
 # IDEs and editors
